# ClearMate

./: .env.example  .gitignore  CHANGELOG.md  README.md
.github/workflows/: deploy.yml
apps/api/: alembic.ini  pyproject.toml  test_smoke.py
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/: auth.py
apps/api/app/api/v1/: analyses.py  auth.py  files.py  tasks.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  analysis.py  file.py  task.py  user.py
apps/api/app/repositories/: __init__.py  file.py  task.py  user.py
apps/api/app/schemas/: __init__.py  analysis.py  file.py  task.py  user.py
apps/api/app/services/: __init__.py  analysis_service.py  file_service.py  file_text_extractor.py  task_service.py  user_service.py
apps/api/app/services/llm/: __init__.py  base.py  client.py  mock_provider.py  openai_provider.py
apps/api/app/services/llm/prompts/: __init__.py
apps/api/app/tests/: conftest.py  test_analyses.py  test_auth.py  test_config.py  test_files.py  test_health.py  test_tasks.py
apps/web/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/lib/: analyze-progress.ts  api-client.ts  (+14 more)
docs/architecture/: ARCHITECTURE.md
docs/product/: PRD.md
docs/roadmap/: IMPLEMENTATION_PLAN.md  TODO.md
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.web
infra/nginx/: nginx.conf
scripts/: create_main.py  setup_backend.py  setup_frontend.py  test_api_e2e.py
(+35 files in other folders)
